--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,8 @@
       VK.Retargeting.Init('VK-RTRG-645-i8bUm'); 
       VK.Retargeting.Hit();
     </script>
+
+    <script type="text/javascript" src="js/box.js"></script>
     <div class="">
         <div class="box__circles">
             <div class="box__circle-1"><img src="img/circle_pink.png"></div>
@@ -122,9 +124,8 @@
                     <div class="box__content_left">
                         <div class="box__title blue">Конструктор коробки</div>
                         <div class="box__text">
-                            Собери сам, подари другу 
-                            <br />
-                            Для начала выбери книгу, а потом приходи
+                            Простой конструктор поможет создать <br />
+                            подарочную коробку
                         </div>
                         <div class="box__link">
                             <a href="#" class="box__button"> Собрать свою коробку </a>
