changed margin text & text

--- a/src/index.html
+++ b/src/index.html
@@ -63,10 +63,13 @@
                     <div class="box__content_right">
                         <div class="box__title blue">Все просто как раз-два-три</div>
                         <div class="box__text box__text_accent">
-                            Шаг 1: нажмите на кнопку &laquo;Упаковать в подарок&raquo; на странице книги
+                            Шаг 1: нажмите на кнопку &laquo;Упаковать <br /> 
+                            в подарок&raquo; на странице книги
                         </div>
                         <div class="box__text">
-                            Упаковать можно только 1 книгу размером не более 50х50х50 см.
+                            Упаковать можно только 1 книгу 
+                            <br />
+                            размером не более 50х50х50 см.
                         </div>  
                     </div>
                 </div>
@@ -125,11 +128,18 @@
                         <div class="box__title blue">Конструктор коробки</div>
                         <div class="box__text">
                             Простой конструктор поможет создать <br />
-                            подарочную коробку
+                            подарочную коробку:
+                        </div>
+                        <div class="box__text">
+                            1. Выберите на сайте книгу, <br /> которую хотите вручить <br />
+                            2. Нажмите на значок "Упаковать в подарок"
+                        </div>
+                        <div class="box__text box__text_gray">
+                            Не нашли значок? Значит книга слишком велика для коробочки, нужно выбрать другую
                         </div>
                         <div class="box__link">
                             <a href="#" class="box__button"> Собрать свою коробку </a>
-                            <a href="#" class="box__text_gray">Посмотреть готовые варианты </a>
+                            <a href="#" class="box__text_gray">Посмотреть <br/> готовые варианты </a>
                         </div>
                     </div>
                     <div class="box__content_right">
