--- a/src/index.html
+++ b/src/index.html
@@ -32,12 +32,15 @@
         <div class="box__circles">
             <div class="box__circle-1"><img src="img/circle_pink.png"></div>
             <div class="box__circle-7"><img src="img/circle_violet_half.png"></div>
-            <div class="box__circle-8"><img src="img/circle_blue.png"></div>
+            <div class="box__circle-8"><img src="img/circle_blue.svg"></div>
         </div>
         <div class="box__header">
             <div class="box__container">
                 <div class="box__content">
                     <div class="box__content_left">
+                        <div class="box__text_gray">
+                            beta-версия
+                        </div>
                         <div class="box__title blue">Ура, теперь книгу можно упаковать в подарок!</div>
                         <div class="box__text">
                             Дарите книгу себе или другу? Закажите к ней подарочную коробку! Необычная упаковка поднимает настроение и усиливает восторг. Мы проверяли!
@@ -143,7 +146,7 @@
                         </div>
                     </div>
                     <div class="box__content_right">
-                        <div class="box__image"><img src="img/box_constructor.png"></div>
+                        <div class="box__image"><img src="img/box_constructor1.png"></div>
                     </div>
                 </div>
             </div>
