--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
     <div class="">
         <div class="box__circles">
             <div class="box__circle-1"><img src="img/circle_pink.png"></div>
+            <div class="box__circle-2"><img src="img/circle_blue_little.png"></div>
             <div class="box__circle-7"><img src="img/circle_violet_half.png"></div>
             <div class="box__circle-8"><img src="img/circle_blue.svg"></div>
         </div>
@@ -49,8 +50,7 @@
                         <div class="box__circle-3"><img src="img/circle_green.png"></div>
                     </div>
                     <div class="box__content_right">
-                        <div class="box__image"><img src="img/box.png"></div>
-                        <div class="box__circle-2"><img src="img/circle_teleport.png"></div>
+                        <div class="box__image"><img src="img/box1.png"></div>
                         <div class="box__circle-5"><img src="img/circle_green_blur.png"></div>
                         <div class="box__circle-4"><img src="img/circle_violet_.png"></div>
                     </div>
@@ -61,7 +61,7 @@
             <div class="box__container">
                 <div class="box__content">
                     <div class="box__content_left">
-                        <div class="box__image"><img src="img/book.png"></div>
+                        <div class="box__image"><img src="img/box_search.png"></div>
                     </div>
                     <div class="box__content_right">
                         <div class="box__title blue">Все просто как раз-два-три</div>
@@ -98,11 +98,12 @@
             </div>
         </div>
         <div class="box__third-step box_bg">
+            <div class="box__circle-9"><img src="img/circle_green_half.png"></div>
             <div class="box__container">
                 <div class="box__content">
                     <div class="box__content_left">
                         <div class="box__image">
-                            <img src="img/box_heart.png">
+                            <img src="img/box_close.png">
                         </div>
                     </div>
                     <div class="box__content_right">
@@ -123,8 +124,8 @@
             </div>
         </div>
         <div class="box__constructor">
-            <div class="box__circle-9"><img src="img/circle_green_half.png"></div>
             <div class="box__circle-10"><img src="img/circle_teleport.png"></div>
+            <div class="box__circle-11"><img src="img/circle_violet_left.png"></div>
             <div class="box__container">
                 <div class="box__content">
                     <div class="box__content_left">
@@ -134,19 +135,26 @@
                             подарочную коробку:
                         </div>
                         <div class="box__text">
-                            1. Выберите на сайте книгу, <br /> которую хотите вручить <br />
+                            1. Выберите на сайте книгу, которую <br /> хотите вручить <br />
                             2. Нажмите на значок "Упаковать в подарок"
                         </div>
                         <div class="box__text box__text_gray">
                             Не нашли значок? Значит книга слишком велика для коробочки, нужно выбрать другую
                         </div>
-                        <div class="box__link">
+                        <!-- <div class="box__link">
                             <a href="#" class="box__button"> Собрать свою коробку </a>
                             <a href="#" class="box__text_gray">Посмотреть <br/> готовые варианты </a>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="box__content_right">
-                        <div class="box__image"><img src="img/box_constructor1.png"></div>
+                        <div class="box__image">
+                            <img src="img/box_constructor1.png">
+                            <a href="#" class="box__text blue"> Посмотреть <br/> готовые варианты </a>
+                        </div>
+                        <div class="box__image">
+                            <img src="img/box_constructor2.png">
+                            <a href="#" class="box__text blue"> Собрать <br/> свою упаковку </a>
+                        </div>
                     </div>
                 </div>
             </div>
