--- a/src/index.html
+++ b/src/index.html
@@ -28,14 +28,30 @@
     </script>
 
     <script type="text/javascript" src="js/box.js"></script>
-    <div class="">
+    <div class="box">
+        <div class="box__header">
+            <div class="box__container">
+                <div class="box__logo"><img src="img/logo.png"></div>
+                <ul class="box__menu">
+                    <li class="box__menu_item">
+                        <a href="https://www.chitai-gorod.ru/events/chitai-agent/posts/">Конструктор упаковки</a>
+                    </li>
+                    <li class="box__menu_item">
+                        <a href="https://www.chitai-gorod.ru/events/chitai-agent/posts/">Готовые варианты коробок</a>
+                    </li>
+                    <li class="box__menu_item active">
+                        <a href="https://www.chitai-gorod.ru/events/chitai-agent/posts/">Что это такое?</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
         <div class="box__circles">
             <div class="box__circle-1"><img src="img/circle_pink.png"></div>
             <div class="box__circle-2"><img src="img/circle_blue_little.png"></div>
             <div class="box__circle-7"><img src="img/circle_violet_half.png"></div>
             <div class="box__circle-8"><img src="img/circle_blue.svg"></div>
         </div>
-        <div class="box__header">
+        <div class="box__prime">
             <div class="box__container">
                 <div class="box__content">
                     <div class="box__content_left">
@@ -47,7 +63,7 @@
                             Дарите книгу себе или другу? Закажите к ней подарочную коробку! Необычная упаковка поднимает настроение и усиливает восторг. Мы проверяли!
                         </div>
                         <a href="#" class="box__button">Как это сделать?</a>
-                        <div class="box__circle-3"><img src="img/circle_green.png"></div>
+                        
                     </div>
                     <div class="box__content_right">
                         <div class="box__image"><img src="img/box1.png"></div>
@@ -136,7 +152,7 @@
                         </div>
                         <div class="box__text">
                             1. Выберите на сайте книгу, которую <br /> хотите вручить <br />
-                            2. Нажмите на значок "Упаковать в подарок"
+                            2. Нажмите на кнопку "Упаковать в подарок"
                         </div>
                         <div class="box__text box__text_gray">
                             Не нашли значок? Значит книга слишком велика для коробочки, нужно выбрать другую
